--- a/css/main.css
+++ b/css/main.css
@@ -221,17 +221,17 @@ video {
 
 @media (max-width:768px) {
   #main_slide h2 {
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-weight: 400;
   }
 
   #main_slide .title {
-    font-size: 3.6rem;
+    font-size: 3rem;
 
   }
 
   #main_slide .desc {
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
 
   #main_slide .desc .mobile {
@@ -239,7 +239,7 @@ video {
   }
 
   #main_slide .mv a {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
 
   #main_slide .mv .mv_txt_span a {
@@ -333,14 +333,14 @@ video {
 
 
   #main_campaign h2 {
-    font-size: 3rem;
+    font-size: 2.6rem;
     font-weight: 400;
     background: #03462A;
   }
 
   #main_campaign .desc {
     font-weight: 400;
-    font-size: 2rem;
+    font-size: 1.6rem;
     text-align: right;
     padding: 20px 0 30px;
   }
@@ -446,15 +446,15 @@ video {
 
 @media (max-width:768px) {
   #sustainability .swiper-slide h2 {
-    font-size: 5rem;
+    font-size: 4rem;
   }
 
   #sustainability .swiper-slide .title {
-    font-size: 2.8rem;
+    font-size: 2.4rem;
   }
 
   #sustainability .swiper-slide p {
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
 }
 
@@ -1096,28 +1096,28 @@ video {
   #athe .img_01 img {
     position: absolute;
     left: 2vw;
-    top: 30vw;
+    top: 50vw;
     width: 30vw;
   }
 
   #athe .img_02 img {
     position: absolute;
     left: 32vw;
-    top: 30vw;
+    top: 50vw;
     width: 55vw;
   }
 
   #athe .img_03 img {
     position: absolute;
     left: 56.5vw;
-    top: 54vw;
+    top: 74vw;
     width: 30vw;
   }
 
   #athe .img_04 img {
     position: absolute;
     left: 2vw;
-    top: 97.5vw;
+    top: 117.5vw;
     width: 55vw;
   }
 
@@ -1131,21 +1131,21 @@ video {
   #athe .img_02 .over {
     position: absolute;
     left: 32vw;
-    top: 40vw;
+    top: 60vw;
     width: 55vw;
   }
 
   #athe .img_03 .over {
     position: absolute;
     left: 56.5vw;
-    top: 74vw;
+    top: 100vw;
     width: 30vw;
   }
 
   #athe .img_04 .over {
     position: absolute;
     left: 2vw;
-    top: 107.5vw;
+    top: 123vw;
     width: 55vw;
   }
 
@@ -1311,8 +1311,12 @@ video {
   }
 
   #sto .store_txt {
-    padding-bottom: 100px;
+    padding: 100px 0;
     transform: translateX(-50%);
+  }
+
+  #sto .store_txt h2 {
+    font-size: 4rem;
   }
 
   #sto .store_txt p {
@@ -1340,5 +1344,18 @@ video {
   }
 
 
+  #sto .store .thumbnail .over {
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    color: #EFEFE4;
+    text-align: center;
+    padding: 30% 0;
+    font-size: 1.4rem;
+    opacity: 0;
+  }
 }
 
