--- a/css/product.css
+++ b/css/product.css
@@ -120,8 +120,7 @@ body {
   }
 
   #sub_visual .skin_list a {
-    padding: 5px;
-    font-size: 1.6rem;
+    display: none;
   }
 }
 
@@ -193,7 +192,7 @@ body {
   
 
 #product {
-  padding: 150px 0;
+  padding: 50px 0;
   height: 120vh;
 }
 
